ingress/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-sample

spec:
  rules:
    - host: miapp.local
      http:
        paths:
          - path: /
            pathType: Prefix # Tenemos "Prefix" y "Exact" como tipos de path 
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
